packages/keystone-tui/tests/snapshots/render__render_build_screen_with_output.snap
---
source: tests/render.rs
expression: output
---
                Building: test-host (success)               
                                                            
────────────────────────────────────────────────────────────
┌──────────────────────────────────────────────────────────┐
│$ nixos-rebuild build --flake .#test-host                 │
│                                                          │
│building '/nix/store/...'                                 │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                     Esc: back • q: quit
