packages/keystone-tui/tests/snapshots/render__render_dashboard_empty.snap
---
source: tests/render.rs
assertion_line: 314
expression: output
---
                          Hosts Dashboard - my-infra                            
                                                                                
────────────────────────────────────────────────────────────────────────────────
                           No hosts found in flake.nix                          
                                                                                
                           Press 'a' to add a new host                          
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                              a: add host • q: quit
