packages/keystone-tui/tests/snapshots/render__render_dashboard_no_tailscale.snap
---
source: tests/render.rs
assertion_line: 283
expression: output
---
                       Hosts Dashboard - my-infra  2 hosts                      
                                                                                
────────────────────────────────────────────────────────────────────────────────
>   laptop (x86_64-linux)      │              Collecting metrics...             
    server (x86_64-linux)      │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
    ↑/↓: navigate • Enter: details • b: build • i: ISO • r: refresh • q: quit
