packages/keystone-tui/tests/snapshots/render__render_dashboard_with_metrics.snap
---
source: tests/render.rs
assertion_line: 236
expression: output
---
                       Hosts Dashboard - my-infra  3 hosts                      
                                                                                
────────────────────────────────────────────────────────────────────────────────
>  ● laptop (x86_64-linux)  100│██████████████████████                          
   ● server (x86_64-linux)  100│██████████████████CPU   45.2%                   
   ○ rpi (aarch64-linux)  100.6│████████████████████████                        
                               │████████████████MEM  8.0G/16.0G                 
                               │██████                                          
                               │██████           SWAP 512M/4.0G                 
                               │                                                
                               │  /        [█████████░░░]   78%                 
                               │  /nix     [███████░░░░░]   64%                 
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │                                                
                               │  CPU 52°C  GPU 48°C                            
                               │                                                
    ↑/↓: navigate • Enter: details • b: build • i: ISO • r: refresh • q: quit
