packages/keystone-tui/tests/snapshots/render__render_empty_hosts.snap
---
source: tests/render.rs
expression: output
---
               Hosts Dashboard - empty-repo                 
                                                            
────────────────────────────────────────────────────────────
 Hosts       │   No hosts found                             
  Services   │                                              
  Secrets    │  Press 'a' to add                            
  Security   │                                              
             │                                              
             │                                              
             │                                              
             │                                              
             │                                              
             │                                              
             │                                              
            1-4: sections • a: add host • q: quit
