packages/keystone-tui/tests/snapshots/render__render_host_detail.snap
---
source: tests/render.rs
expression: output
---
                      Host: workstation                     
                                                            
────────────────────────────────────────────────────────────
                                                            
  System:     x86_64-linux                                  
                                                            
  Modules:    operating-system                              
              desktop                                       
                                                            
  Config:     ./configuration.nix                           
              ./hardware.nix                                
                                                            
                                                            
                                                            
                                                            
               b: build • Esc: back • q: quit
