packages/keystone-tui/tests/snapshots/render__render_hosts_list.snap
---
source: tests/render.rs
assertion_line: 78
expression: output
---
             Hosts Dashboard - my-infra  2 hosts            
                                                            
────────────────────────────────────────────────────────────
 laptop                │Remote metrics via Prometheus — comi
 server                │                                    
                       │                                    
                       │                                    
                       │                                    
                       │                                    
                       │                                    
                       │                                    
                       │                                    
                       │                                    
                       │                                    
↑/↓: navigate • Enter: details • b: build • i: ISO • r: refr
